--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,431 @@
-.container {
-  padding: 0 2rem;
-}
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.navbar {
+  width: 100%;
+  padding: 10px 25px;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
 }
 
 .logo {
-  height: 1em;
-  margin-left: 0.5rem;
+  display: flex;
+  align-items: center;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
+.logo p{
+  color: white;
+  font-size: 1.2rem;
+  margin-right: 20px;
+}
+
+.earlyLinkLogo {
+  width: 55px;
+  height: 55px;
+  margin-right: 10px;
+}
+
+.logo a img {
+  width: 30px;
+  margin-right: 15px;
+  margin-top: 10px;
+}
+
+.rightSide {
+  display: flex;
+  align-items: center;
+}
+
+.rightSide a {
+  color: white;
+  font-size: 1.15rem;
+  margin-right: 18px;
+}
+
+.explore {
+  background: none;
+  border: 1px solid var(--main);
+  border-radius: 20px;
+  color: white;
+  display: flex;
+  align-items: center;
+  padding: 9px 20px;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.explore svg {
+  width: 13px;
+  height: 13px;
+  margin-left: 10px;
+}
+
+.listNFT {
+  background: var(--main);
+  border: none;
+  border-radius: 20px;
+  color: white;
+  display: flex;
+  align-items: center;
+  padding: 9px 20px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  margin-left: 20px;
+}
+
+.changeChain{
+  background: var(--lighter-bg);
+  padding: 5px 10px;
+  padding-right: 5px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  margin-right: 15px;
+  border-radius: 15px;
+}
+
+.changeChain svg {
+  width: 35px;
+  height: 35px;
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  margin-top: 100px;
+}
+
+.hero h1{
+  font-size: 2.8rem;
+}
+
+.hero h1 span{
+  color: var(--main);
+}
+
+.scroll {
+  display: block;
+  margin-top: 10px;
+}
+
+.circle {
+  animation: upDown 800ms infinite alternate-reverse;
+}
+
+@keyframes upDown {
+  0% {
+    -webkit-transform: translate(262px, 798px);
+    transform: translate(262px, 798px);
+  }
+  100% {
+    -webkit-transform: translate(262px, 830px);
+    transform: translate(262px, 830px);
+  }
+}
+
+.topPart {
+  margin: 0 25px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 180px;
+  border-bottom: 1px solid var(--lightest);
+}
+
+.topPart p:nth-child(1){
+  font-size: 1.25rem;
+  margin-bottom: 8px;
+}
+
+.table {
+  margin: 0 auto;
+  width: fit-content;
+  margin-top: 40px;
+  padding-bottom: 50px;
+}
+
+.tableHeader {
+  display: grid;
+  grid-template-columns: 100px 240px 140px 120px 120px 100px;
+  align-items: center;
+}
+
+.tableHeader div{
+  font-size: 1.1rem;
+  color: var(--lightest);
+}
+
+.row{
+  display: grid;
+  grid-template-columns: 100px 240px 140px 120px 120px 100px;
+  align-items: center;
+}
+
+.row div{
+  font-size: 1.1rem;
+}
+
+.twitterNumbers, .discordNumbers, .daoVotes, .name {
+  display: flex;
+  align-items: center;
+}
+
+.daoVotes svg{
+  width: 30px;
+  height: 30px;
+  margin-left: 5px;
+}
+
+.twitterNumbers a img{
+  width: 45px;
+  height: 45px;
+  margin-top: 5px;
+}
+
+.discordNumbers a img{
+  width: 32px;
+  height: 32px;
+  margin-left: 7px;
+  margin-top: 5px;
+}
+
+.name img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.row{
+  background: var(--lighter-bg);
+  border-radius: 30px;
+  margin-top: 20px;
+  padding: 0 20px;
+  margin-left: -20px;
+}
+
+.row div:nth-child(1){
+  margin-left: 10px;
+}
+.row div:nth-child(4){
+  margin-left: 5px;
+}
+
+.launched {
+  color: #00DC3E;
+}
+
+.upcoming{
+  color: #CADC00;
+}
+
+.row div:nth-child(5){
+  margin-left: 7px;
+}
+
+.row div:nth-child(6){
+  margin-left: 13px;
+}
+
+.line{
+  width: 100%;
+  background: var(--lightest);
+  height: 1px;
+  margin-top: 25px;
+  margin-left: -10px;
+}
+
+.line::after {
+  content: "";
+  width: 35px;
+  height: 3px;
+  background: var(--main);
+  position: absolute;
+  margin-top: -1.2px;
+  margin-left: 57px;
+  box-shadow: 0px 0.3px 5px var(--main);
+}
+
+.hamburger {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0px;
+  cursor: pointer;
+  display: none;
+}
+
+.hamburgerLine {
+  width: 30px;
+  height: 2px;
+  background-color: white;
+  margin-top: 5px;
+}
+
+.closeMenu{
+  width: 33px;
+  height: 33px;
+  fill: white;
+  margin-top: -70px;
+  margin-left: 190px;
+  position:absolute;
+  cursor: pointer;
+  display: none;
+}
+
+
+.changeTable {
+  background-color: var(--main);
+  color: white;
+  font-size: 1.2rem;
+  padding: 10px 25px;
+  border-radius: 25px;
+  cursor: pointer;
+  margin-bottom: 12px;
+}
+
+/*  RESPONSIVE */
+
+@media only screen and (max-width: 1130px){
+  .rightSide {
+    display: flex;
     flex-direction: column;
+    position: absolute;
+    top: 0;
+    align-items: center;
+    background: #03000e;
+    left: -350px;
+    padding: 30px 50px;
+    padding-top: 75px;
+    border-right: 1px solid var(--lightest);
+    border-bottom: 1px solid var(--lightest);
+    border-bottom-right-radius: 30px;
+    transition: all 350ms linear;
+  }
+
+  .closeMenu{
+    display: block;
+  }
+
+  .rightSide a {
+    margin-right: 0px;
+    margin-top: 15px;
+  }
+
+  .explore {
+   margin-top: 30px;
+  }
+
+
+  .listNFT {
+    margin-left: 0px;
+    margin-top: 15px;
+  }
+  
+  .changeChain{
+    margin-right: 0px;
+  }
+
+  
+  .hamburger {
+    display: flex;
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
+@media only screen and (max-width: 900px){
+  .hero h1{
+    font-size: 2.3rem;
+    text-align: center;
+    padding: 0 15px;
   }
-  .code {
-    background: #111;
+
+  .tableHeader {
+    display: grid;
+    grid-template-columns: 60px 200px 110px 90px 90px 100px;
+    align-items: center;
   }
-  .logo img {
-    filter: invert(1);
+  
+  .row{
+    display: grid;
+    grid-template-columns: 60px 200px 110px 90px 90px 100px;
+    align-items: center;
+  }
+}
+
+@media only screen and (max-width: 715px){
+  .row .name img {
+    display: none;
+  }
+
+  .tableHeader {
+    grid-template-columns: 40px 150px 110px 90px 90px 100px;
+  }
+  
+  .tableHeader div{
+    font-size: 1rem;
+  }
+  
+  .row{
+    grid-template-columns: 40px 150px 110px 90px 90px 100px;
+  }
+
+  .row div {
+    font-size: 1rem;
+  }
+}
+
+.mobileInfo {
+  display: none;
+}
+
+@media only screen and (max-width: 650px){
+  .row{
+    grid-template-columns: 1fr;
+    width: 95%;
+    margin-left: 0;
+    margin: 0 15px;
+    padding-top: 20px;
+  }
+
+  .table{
+    width: 100%;
+  }
+
+  .line {
+    margin-left: 5px;
+    width: 90%;
+    margin: 15px auto;
+  }
+
+  .tableHeader{
+    display: none;
+  }
+
+  .mobileInfo{
+    display: inline-block;
+    color: var(--lightest);
+  }
+
+  .row div:nth-child(1){
+  margin-left: 0px;
+}
+.row div:nth-child(4){
+  margin-left: 0px;
+}
+
+.row div:nth-child(5){
+  margin-left: 0px;
+}
+
+.row div:nth-child(6){
+  margin-left: 0px;
+}
+
+
+}
+
+@media only screen and (max-width: 400px){
+  .navbar{
+    padding-left: 10px;
   }
 }
