--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -72,6 +72,13 @@
   margin-left: 20px;
 }
 
+.shareLink {
+  background: var(--main);
+  border: none;
+  border-radius: 20px;
+  padding: 9px 20px;
+}
+
 .changeChain{
   background: var(--lighter-bg);
   padding: 5px 10px;
