--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -124,10 +124,10 @@
 }
 
 .hero h1{
-  font-size: 2.8rem;
+  font-size: 2.5rem;
 }
 
-.hero h1 span{
+.hero h1 span:nth-child(3){
   color: var(--main);
 }
 
