--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,3 +32,16 @@ a {
 abbr{
   text-decoration: none;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--lighter-bg);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--lightest);
+  border-radius: 50px;
+}
