--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -4,6 +4,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    z-index: 999;
   }
   
   .logo {
