--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,6 +5,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
+  z-index: 9999;
 }
 
 .logo {
@@ -124,11 +126,16 @@
   margin-top: 100px;
 }
 
-.hero h1{
-  font-size: 2.5rem;
+.heroTitle{
+  font-size: 2.4rem;
+  width: fit-content;
+  margin: 0 auto;
+  text-align: center;
+  font-weight: 600;
+  padding: 0 15px;
 }
 
-.hero h1 span:nth-child(1){
+.hero span:nth-child(1){
   color: var(--main);
 }
 
@@ -210,6 +217,13 @@
   margin-top: 20px;
   padding: 0 20px;
   margin-left: -20px;
+  transition: all 250ms linear;
+  cursor: pointer;
+}
+
+.row:hover{
+  transform: scale(108%);
+  background-color: #0c003a;
 }
 
 .row div:nth-child(1){
@@ -291,7 +305,91 @@
   margin-bottom: 12px;
   border: none;
   margin-right: 20px;
+  border: 2px solid var(--main);
 }
+
+.topPart button:nth-child(2){
+  background: transparent;
+}
+
+.popUp {
+  width: 500px;
+  position: fixed;
+  padding: 15px 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--lighter-bg);
+  z-index: 994;
+  border-radius: 15px;
+  padding-top: 40px;
+  display: none;
+}
+
+.projectName{
+  display: flex;
+  align-items: center;
+}
+
+.projectName .projectImage {
+  border-radius: 50%;
+  width: 90px;
+  height: 90px;
+}
+
+.projectName a img{
+  width: 60px;
+  height: 60px;
+  margin-top: 10px;
+}
+
+.projectName p {
+  margin-left: 10px;
+  font-size: 1.2rem;
+}
+
+.projectDescription {
+  color: var(--lightest);
+  max-height: 240px;
+  overflow: auto;
+}
+
+.projectDescription::-webkit-scrollbar {
+  width: 5px;
+}
+
+.projectVotes {
+  font-size: 1.1rem;
+}
+
+.projectVotes span{
+  color: var(--lightest)
+}
+
+.closePopUp {
+  width: 30px;
+  height: 30px;
+  fill: white;
+  position: absolute;
+  right: 0;
+  margin-right: 10px;
+  cursor: pointer;
+  top: 0;
+  margin-top: 7px;
+}
+
+.backgroundAddon {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: black;
+  z-index: 992;
+  opacity: 0.7;
+  display: none;
+}
+
 
 /*  RESPONSIVE */
 
@@ -353,8 +451,8 @@
 }
 
 @media only screen and (max-width: 900px){
-  .hero h1{
-    font-size: 2.3rem;
+  .heroTitle{
+    font-size: 2rem;
     text-align: center;
     padding: 0 15px;
   }
@@ -442,6 +540,25 @@
 }
 
 
+}
+
+.break {
+  display: none;
+}
+
+@media only screen and (max-width: 530px){
+  .popUp {
+    width: 95%;
+  }
+
+  .break {
+    display: block;
+  }
+
+  .heroTitle {
+    font-size: 1.9rem;
+    text-align: start;
+  }
 }
 
 @media only screen and (max-width: 400px){
