--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,6 @@
+.container {
+  padding-bottom: 150px;
+}
 
 .navbar {
   width: 100%;
@@ -138,7 +141,7 @@
   align-items: center;
   justify-content: center;
   color: white;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .heroTitle{
@@ -171,12 +174,13 @@
   margin: 0 auto;
   width: fit-content;
   margin-top: 40px;
-  padding-bottom: 50px;
+  position: relative;
+  left: 10px;
 }
 
 .tableHeader {
   display: grid;
-  grid-template-columns: 100px 240px 140px 120px 120px 100px;
+  grid-template-columns: 150px 380px 140px 120px 120px 100px;
   align-items: center;
 }
 
@@ -187,7 +191,7 @@
 
 .row{
   display: grid;
-  grid-template-columns: 100px 240px 140px 120px 120px 100px;
+  grid-template-columns: 150px 380px 140px 120px 120px 100px;
   align-items: center;
 }
 
@@ -206,17 +210,31 @@
   margin-left: 5px;
 }
 
-.twitterNumbers a img{
-  width: 45px;
-  height: 45px;
-  margin-top: 5px;
+.website svg:hover, .twitterNumbers a svg:hover, .discordNumbers a img:hover{
+  transform: scale(117%);
 }
 
+.website a svg, .twitterNumbers a svg{
+  width: 35px;
+  transition: all 300ms linear;
+  height: 35px;
+}
+
+.twitterNumbers a svg{
+  fill: white;
+  width: 30px;
+  height: 30px;
+  margin-left: 9px;
+}
+
+
 .discordNumbers a img{
-  width: 32px;
-  height: 32px;
+  width: 40px;
+  height: 40px;
+  transition: all 300ms linear;
   margin-left: 7px;
   margin-top: 5px;
+  
 }
 
 .name img {
@@ -244,6 +262,10 @@
 .row div:nth-child(1){
   margin-left: 10px;
 }
+.row div:nth-child(3){
+  margin-left: 25px;
+}
+
 .row div:nth-child(4){
   margin-left: 5px;
 }
@@ -329,43 +351,55 @@
 
 .popUp {
   width: 500px;
-  position: fixed;
   padding: 15px 20px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background-color: var(--lighter-bg);
   z-index: 994;
   border-radius: 15px;
-  padding-top: 40px;
+  padding-top: 5px;
+  position: absolute;
+  margin-top: 200px;
   display: none;
+  left: 50%;
+  transform: translate(-50%, 0%);
+}
+
+.popUpIcons{
+  display: flex;
+  align-items: center;
 }
 
 .projectName{
   display: flex;
   align-items: center;
+  margin-left: -10px;
 }
 
-.projectName .projectImage {
-  border-radius: 50%;
-  width: 90px;
-  height: 90px;
+.projectImage {
+  width: 100%;
+  height: 100%;
 }
 
 .projectName a img{
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   margin-top: 10px;
+}
+
+.projectName a svg {
+  width: 37px;
+  height: 37px;
+  margin-top: 10px;
+  margin-right: 10px;
 }
 
 .projectName p {
   margin-left: 10px;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
 }
 
 .projectDescription {
   color: var(--lightest);
-  max-height: 240px;
+  max-height: 180px;
   overflow: auto;
 }
 
@@ -465,6 +499,17 @@
 }
 }
 
+@media only screen and (max-width: 1075px){
+
+  .tableHeader {
+    grid-template-columns: 80px 250px 140px 120px 120px 100px;
+  }
+  
+  .row{
+    grid-template-columns: 80px 250px 140px 120px 120px 100px;
+  }
+}
+
 @media only screen and (max-width: 900px){
   .heroTitle{
     font-size: 2rem;
@@ -472,16 +517,33 @@
     padding: 0 15px;
   }
 
+  .row:hover{
+    transform: none;
+    background-color: #0c003a;
+  }
+
   .tableHeader {
-    display: grid;
     grid-template-columns: 60px 200px 110px 90px 90px 100px;
-    align-items: center;
   }
   
   .row{
-    display: grid;
     grid-template-columns: 60px 200px 110px 90px 90px 100px;
-    align-items: center;
+  }
+
+  .website a svg{
+    width: 30px;
+    height: 30px;
+  }
+  .discordNumbers a img{
+    width: 37px;
+    height: 37px;
+    margin-left: 10px;
+  }
+
+  .twitterNumbers a svg{
+    width: 25px;
+    height: 25px;
+    margin-left: 13px;
   }
 }
 
@@ -530,6 +592,7 @@
 
   .table{
     width: 100%;
+    left: 0px;
   }
 
   .line {
@@ -551,25 +614,42 @@
     margin-left: 0px;
   }
 
+  .row div:nth-child(3) {
+    margin-left: 0px;
+    display: flex;
+    align-items: center;
+  }
+
   .row div:nth-child(2){
     margin-top: -7px;
   }
 
+  .website a svg {
+    margin-top: 5px;
+  }
+
+  .twitterNumbers a svg {
+    margin-top: 5px;
+    margin-left: 3px;
+  }
+
+  .discordNumbers a img {
+    margin-left: 0px;
+  }
+
   .row div:nth-child(4){
     margin-left: 0px;
-    margin-top: -5px;
+    margin-top: 5px;
   }
 
   .row div:nth-child(5){
     margin-left: 0px;
-    margin-top: -18px;
   }
 
   .row div:nth-child(6){
     margin-left: 0px;
-    margin-top: -22px;
+    margin-top: -15px;
   }
-
 
 }
 
@@ -580,6 +660,29 @@
 @media only screen and (max-width: 530px){
   .popUp {
     width: 95%;
+  }
+
+  .projectName{
+    flex-direction: column;
+    display: flex;
+    align-items: start;
+  }
+
+  .popUpIcons{
+    margin-top: -30px;
+    display: flex;
+    align-items: center;
+    margin-left: -5px;
+  }
+
+  .projectName a img{
+    width: 50px;
+    height: 50px;
+    margin-top: 0px;
+  }
+  
+  .projectName a svg {
+    margin-top: 0px;
   }
 
   .navbar{
@@ -593,5 +696,9 @@
   .heroTitle {
     font-size: 1.9rem;
     text-align: start;
+  }
+
+  .breakDesktop{
+    display: none;
   }
 }
