--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -360,7 +360,7 @@
   margin-top: 200px;
   display: none;
   left: 50%;
-  transform: translate(-50%, 0%);
+  transform: translate(-50%, -50px);
 }
 
 .popUpIcons{
