--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -5,7 +5,8 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-    z-index: 999;
+    z-index: 9999;
+    border-bottom: 1px solid var(--lightest);
   }
   
   .logo {
