--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -429,9 +429,8 @@
   flex-direction: row;
   width: fit-content;
   padding: 50px 0px;
-  justify-content: center;
-  align-items: center;
   padding-left: 80px;
+  margin: 0 auto;
 }
 
 .bannerWrapper div{
