--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -25,13 +25,8 @@
 }
 
 .earlyLinkLogo img {
-  width: 60px;
-  height: 60px;
-}
-
-.earlyLinkLogo p{
-  font-size: 1.25rem;
-  margin-left: 5px;
+  width: 180px;
+  height: 50px;
 }
 
 .navIconsWrapper{
@@ -144,7 +139,7 @@
   margin: 0 25px;
   display: flex;
   margin-top: 60px;
-  justify-content: left;
+  justify-content: center;
   margin-left: 65px;
 }
 
