--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -453,6 +453,14 @@
 
 /*  RESPONSIVE */
 
+@media only screen and (min-width: 1500px){
+  .banner {
+    position: absolute;
+    bottom: -110px;
+    top: unset;
+  }
+}
+
 @media only screen and (max-width: 1130px){
   .rightSide {
     display: flex;
